# Compile_principle_program_design

./: .gitignore  CMakeLists.txt  README.md
backend/code_generation/: README.md
backend/grammatical_analysis/: ASTNodes.hpp  CodeGenerate.cpp  CodeGenerate.h  IO.c  Makefile  ObjectGenerate.cpp  ObjectGenerate.h  README.md  TypeSystem.cpp  TypeSystem.h  lex-link.l  semantic_analysis.hpp  symbol_table.hpp  yacc.y  新建文本文档 (4).txt  新建文本文档 (5).txt
backend/grammatical_analysis/doc/: CmdLists.md  语法分析模块.md  语法分析模块设计.md
backend/grammatical_analysis/src/: lex-link.l  main.h  yacc.y
backend/lexical_analysis/: README.md
backend/lexical_analysis/Tests/: Test1  Test1_out.txt  Test2  Test2_out.txt  Test3  Test3_out.txt  Test4  Test4_out.txt  Test5  Test5_out.txt  Test6  Test6_out.txt
backend/lexical_analysis/docs/: 预处理模块.md
backend/lexical_analysis/src/: Disposal.cpp  lex-link.l  lex.l  lex.yy.cpp  lexLink.yy.c  main.cpp  main.h  mainLink.h
backend/semantic_analysis/: README.md  SymbolTable.cpp  中间代码生成与目标代码生成设计.md  使用指南.md  安装指南.md  服务器和客户端设计.md  符号表设计.md  语义分析设计.md
backend/semantic_analysis/src/: ASTNodes.hpp  CodeGenerate.cpp  CodeGenerate.h  Disposal.cpp  Dockerfile  IO.c  Makefile  ObjectGenerate.cpp  ObjectGenerate.h  TypeSystem.cpp  TypeSystem.h  compile_client.py  compiler  global.c  interface.h  lex.yy.cpp  main.h  output.s  pas_temp.pas  process.sh  semantic.h  (+10 more)
backend/test/: README.md  mul_array.pas  pas1_gcd.pas  pas_block2.pas  pas_procedure.pas  quicksort.pas
docs/: PLAN.md  前后端分离与服务器部署.md  目标代码生成.md  规范化开发.md
front/: client.py
src/: lex.l  main.h
(+66 files in other folders)
